feat: Implement i18n for Client and Admin with multiple languages support

--- a/vrcfrontend/package.json
+++ b/vrcfrontend/package.json
@@ -67,6 +67,8 @@
     "express-winston": "^4.2.0",
     "framer-motion": "^12.23.25",
     "glob": "^13.0.0",
+    "i18next": "^25.7.2",
+    "i18next-browser-languagedetector": "^8.2.0",
     "input-otp": "^1.4.2",
     "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.556.0",
@@ -77,6 +79,7 @@
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.68.0",
+    "react-i18next": "^16.5.0",
     "react-resizable-panels": "^3.0.6",
     "react-router-dom": "^7.10.1",
     "recharts": "^3.5.1",
