--- a/backend/package.json
+++ b/backend/package.json
@@ -46,6 +46,8 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
+    "i18next": "^25.7.2",
+    "i18next-browser-languagedetector": "^8.2.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.559.0",
     "next-themes": "^0.4.6",
@@ -54,6 +56,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.68.0",
     "react-hot-toast": "^2.6.0",
+    "react-i18next": "^16.5.0",
     "react-resizable-panels": "^3.0.6",
     "react-router-dom": "^7.10.1",
     "recharts": "^3.5.1",
